# comfyui-compshare

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: main.yml
py/: doubao_seedance_2.py  flux_dev.py  flux_kontext_max.py  flux_kontext_max_t2i.py  flux_kontext_pro.py  flux_kontext_pro_t2i.py  gemini_flash_image.py  gemini_pro_image.py  gpt_image_1.py  gpt_image_1_edit.py  happyhorse_i2v.py  happyhorse_r2v.py  happyhorse_t2v.py  kling_v3.py  kling_v3_omni.py  nodes.py  openai.py  qwen_image_edit.py  qwen_image_t2i.py  veo_3_1.py  vidu_i2v.py  vidu_ref2v.py  vidu_startend2v.py  vidu_t2v.py  wan_ai_i2v.py  wan_ai_t2v.py
py/modelverse_api/: client.py
py/modelverse_api/requests/: doubao_seedance_2.py  gemini_flash_image.py  gemini_pro_image.py  kling_common.py  kling_v3.py  kling_v3_omni.py
web/: modelverse_secrets.css  modelverse_secrets.js
